@@ -10,6 +10,7 @@
   <UserControl.InputBindings>
     <KeyBinding Key="F3" Command="{Binding FindViewModel.FindNextCommand}"/>
     <KeyBinding Modifiers="Shift" Key="F3" Command="{Binding FindViewModel.FindPreviousCommand}"/>
+    <KeyBinding Key="Escape" Command="{Binding FindViewModel.CancelSearchCommand}"></KeyBinding>
   </UserControl.InputBindings>
   
   
